<resources>
    <string name="app_name">Mi Primera App</string>
    <string name="principal">My English App</string>
    <string name="botoninicio">ingresar</string>
    <string name="titpag">Menu</string>
    <string name="tituloa">Animales</string>
    <string name="titulof">Frutas</string>
    <string name="colores">Colores</string>
    <string name="btnescucha">click </string>
    <string name="home">Home </string>
    <string name="sandia">Watermelon </string>
    <string name="pina">Pineapple</string>
    <string name="fresa">Strawberry</string>
    <string name="naranja">Orange</string>
    <string name="rosa">pink</string>
    <string name="amarillo">yellow</string>
    <string name="verde">green</string>
    <string name="roja">red</string>
    <string name="saprender">Aprender</string>
    <string name="sjugar">Jugar</string>
    <string name="titulose">Selecciona la que prefieras</string>
    <string name="pregunta1">¿Cual es la Turtle</string>
    <string name="btnpregunta">Siguiente</string>
    <string name="pregunta2">¿ Cual es la Pineapple ?</string>
    <string name="pregunta3">¿ Cual es el color green ?</string>
    <string name="btnsalir"> Salir </string>
    <string name="pregunta4"> ¿ Cual Es la Cow ? </string>
</resources>