<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuApp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titpag"
        android:textColor="@color/purple"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/btnAnimales"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tituloa"
        android:textSize="30sp"
        android:backgroundTint="@color/rosita"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnFrutas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/titulof"
        android:textSize="30sp"
        android:backgroundTint="@color/rosita"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnColores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/colores"
        android:textSize="30sp"
        android:backgroundTint="@color/rosita"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="30sp"
        android:backgroundTint="@color/azulclaro"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"/>

</LinearLayout>